tests/machine/x/c/membership.c
// Generated by Mochi compiler v0.10.27 on 2006-01-02T15:04:05Z
#include <stdio.h>
#include <stdlib.h>

typedef struct {
  int len;
  int *data;
} list_int;
static list_int list_int_create(int len) {
  list_int l;
  l.len = len;
  l.data = calloc(len, sizeof(int));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
static int contains_array_int(int *arr, int len, int item) {
  for (int i = 0; i < len; i++)
    if (arr[i] == item)
      return 1;
  return 0;
}
int _mochi_main() {
  list_int nums = list_int_create(3);
  nums.data[0] = 1;
  nums.data[1] = 2;
  nums.data[2] = 3;
  printf("%s\n", (contains_array_int(nums, 3, 2)) ? "true" : "false");
  printf("%s\n", (contains_array_int(nums, 3, 4)) ? "true" : "false");
  return 0;
}
int main() { return _mochi_main(); }
